--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "google-fonts": "^1.0.0",
     "react": "^15.2.1",
     "react-addons-update": "^15.3.0",
+    "react-atv-img": "^0.1.1",
     "react-dom": "^15.2.1"
   },
   "scripts": {
