--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "6.3.1",
     "npm": "3.10.6"
   },
-  "main": "index.js",
+  "main": "server.js",
   "devDependencies": {
     "react-scripts": "0.2.1"
   },
@@ -23,7 +23,7 @@
     "react-router": "^2.6.1"
   },
   "scripts": {
-    "start": "npm start",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
